--- a/templates/coucou/index.html.twig
+++ b/templates/coucou/index.html.twig
@@ -1,9 +1,26 @@
-{% extends 'coucou/template.front.html.twig' %}
+{% extends 'layouts/template.front.html.twig' %}
 
-{% block title %}{{ parent() }} | {{ title }}{% endblock %}
+{% block title %}
+	{{ parent() }} | {{ title }}
+{% endblock %}
 
-{% block lead %}Ceci est la page d'accueil de notre site{% endblock %}
-
+{% block nav %}{{ parent() }}{% endblock %}
+{% block lead %}Ceci est notre page d'accueil.{% endblock %}
 {% block main %}
-
+	<div class="container">
+		{% if app.user %}
+			<h3>INFOS USER :</h3>
+			<p>Username: {{ app.user.username }}</p>
+			<h4>SESSION INFOS :</h4>
+			{% for session in app.session.all %}
+				<pre>{{ session }}</pre>
+			{% endfor %}
+		{% endif %}
+		{% if app.debug %}
+			<h3>DEBUG :</h3>
+			<p>Request method: {{ app.request.method }}</p>
+			<p>Application Environment: {{ app.environment }}</p>
+		{% endif %}
+		{{ dump(posts) }}
+	</div>
 {% endblock %}
