--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -1,10 +1,3 @@
-{% extends 'coucou/template.back.html.twig' %}
 
-{% block title %}Hello AdminController!{% endblock %}
-
-{% block main %}
-<ul>
-    <li><a href="{{ path('app_admin_section_index') }}">Crud des sections</a></li>
-    <li><a href="{{ path('app_admin_post_index') }}">Crud des postes</a></li>
-</ul>
-{% endblock %}
+{% extends "layouts/template.back.html.twig" %}
+{% block title %}Administration{% endblock %}
