--- a/templates/admin_post/edit.html.twig
+++ b/templates/admin_post/edit.html.twig
@@ -1,4 +1,4 @@
-{% extends 'coucou/template.back.html.twig' %}
+{% extends 'layouts/template.back.html.twig' %}
 
 {% block title %}Edit Post{% endblock %}
 
@@ -7,7 +7,7 @@
 
     {{ include('admin_post/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_admin_post_index') }}">back to list 🍎</a>
+    <a href="{{ path('app_admin_post_index') }}">back to list</a>
 
     {{ include('admin_post/_delete_form.html.twig') }}
 {% endblock %}
