--- a/templates/admin_post/new.html.twig
+++ b/templates/admin_post/new.html.twig
@@ -1,4 +1,4 @@
-{% extends 'coucou/template.back.html.twig' %}
+{% extends 'layouts/template.back.html.twig' %}
 
 {% block title %}New Post{% endblock %}
 
@@ -7,6 +7,5 @@
 
     {{ include('admin_post/_form.html.twig') }}
 
-    <a href="{{ path('app_admin_post_index') }}">back to list 🍎</a>
+    <a href="{{ path('app_admin_post_index') }}">back to list</a>
 {% endblock %}
-
