--- a/templates/admin_section/show.html.twig
+++ b/templates/admin_section/show.html.twig
@@ -1,4 +1,4 @@
-{% extends 'coucou/template.back.html.twig' %}
+{% extends 'layouts/template.back.html.twig' %}
 
 {% block title %}Section{% endblock %}
 
@@ -22,9 +22,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_admin_section_index') }}">back to list 🍎</a>
+    <a href="{{ path('app_admin_section_index') }}">back to list</a>
 
-    <a href="{{ path('app_admin_section_edit', {'id': section.id}) }}">edit ✎</a>
+    <a href="{{ path('app_admin_section_edit', {'id': section.id}) }}">edit</a>
 
     {{ include('admin_section/_delete_form.html.twig') }}
 {% endblock %}
