--- a/templates/admin_tag/show.html.twig
+++ b/templates/admin_tag/show.html.twig
@@ -1,4 +1,4 @@
-{% extends 'coucou/template.back.html.twig' %}
+{% extends 'layouts/template.back.html.twig' %}
 
 {% block title %}Tag{% endblock %}
 
@@ -18,9 +18,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_admin_tag_index') }}">back to list 🍎</a>
+    <a href="{{ path('app_admin_tag_index') }}">back to list</a>
 
-    <a href="{{ path('app_admin_tag_edit', {'id': tag.id}) }}">edit ✎</a>
+    <a href="{{ path('app_admin_tag_edit', {'id': tag.id}) }}">edit</a>
 
     {{ include('admin_tag/_delete_form.html.twig') }}
 {% endblock %}
