--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,9 +1,8 @@
-{% extends 'coucou/template.front.html.twig' %}
+{% extends 'layouts/template.front.html.twig' %}
 
 {% block title %}Log in!{% endblock %}
 
 {% block body %}
-<div class="container">
     <form method="post">
         {% if error %}
             <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
@@ -39,5 +38,4 @@
             Sign in
         </button>
     </form>
-</div>
 {% endblock %}
